--- a/index.html
+++ b/index.html
@@ -232,22 +232,22 @@ And a active member of the Presidential Initiative for Artificial Intelligence a
             <div class="hidden project-box software">
               <div class="project-details">
                 <div class="project-text">
-                  <h3>Campus Connect</h3>
+                  <h3>Meezan Bank UI clone</h3>
                   <p>
-Here's an amazing project where we connect our University students.</p>
-                  <span class="stack">React Js, Spring Boot, Vercel</span>
+Here's an UI clone of Meezan Bank.</p>
+                  <span class="stack">HTML, CSS, JS, Vercel</span>
                 </div>
 
                 <div class="project-link">
                   <a
-                    href="https://campus-connect-hazel-rose.vercel.app/"
+                    href="https://meezan-three.vercel.app/"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
                     <i class="fas fa-link"></i>
                   </a>
                   <a
-                    href="https://github.com/shaheerahmedcoder/Campus-Connect"
+                    href="https://github.com/shaheerahmedcoder/Meezan-Bank-UI-Clone"
                     target="_blank"
                     rel="noopener noreferrer"
                   >
